tulostaGnuPlotKomento() metodi korjattu.